# gmmloc

./: .gitignore  .gmmloc_https.install  .gmmloc_ssh.install  .travis.yml  README.md
gmmloc/: CMakeLists.txt  package.xml
gmmloc/include/gmmloc/: config.h  global.h  gmmloc.h  init_config.hpp
gmmloc/include/gmmloc/common/: common.h  eigen_stl_types.h  eigen_types.h
gmmloc/include/gmmloc/cv/: orb_extractor.h  orb_matcher.h  orb_vocabulary.h  pinhole_camera.h
gmmloc/include/gmmloc/gmm/: factors.h  gaussian.h  gaussian_mixture.h  gmm_utils.h
gmmloc/include/gmmloc/modules/: localization.h  tracking.h
gmmloc/include/gmmloc/types/: feature.h  frame.h  keyframe.h  map.h  mappoint.h
gmmloc/include/gmmloc/utils/: cv_utils.h  dataloader.h  math_utils.h  protobuf_utils.h  timing.h
gmmloc/include/gmmloc/visualization/: campose_visualizer.h  gmm_visualizer.h  visualizer.h
gmmloc/node/: gmmloc_node.cpp
gmmloc/proto/gmmloc/: GMM.proto
gmmloc/src/: config.cpp  global.cpp  gmmloc.cpp  gmmloc_opt.cpp
gmmloc/src/cv/: orb_extractor.cpp  orb_matcher.cpp  orb_vocabulary.cpp  pinhole_camera.cpp
gmmloc/src/gmm/: factors.cpp  gaussian.cpp  gaussian_mixture.cpp  gmm_utils.cpp
gmmloc/src/modules/: localization.cpp  localization_gmm.cpp  localization_opt.cpp  tracking.cpp  tracking_opt.cpp
gmmloc/src/types/: frame.cpp  keyframe.cpp  map.cpp  mappoint.cpp
gmmloc/src/utils/: cv_utils.cpp  dataloader.cpp  math_utils.cpp  protobuf_utils.cpp  timing.cpp
gmmloc/src/visualization/: campose_visualizer.cpp  gmm_visualizer.cpp  visualizer.cpp
gmmloc_ros/: CMakeLists.txt  package.xml
gmmloc_ros/cfg/: euroc_rect.yaml  v1.yaml  v2.yaml  viz.rviz
gmmloc_ros/data/gt_sync/: V1_01_easy.txt  V1_02_medium.txt  V1_03_difficult.txt  V2_01_easy.txt  V2_02_medium.txt  V2_03_difficult.txt
gmmloc_ros/data/map/: v1.gmm  v2.gmm
gmmloc_ros/launch/: v1.launch  v2.launch  viz.launch
gmmloc_ros/scripts/: evaluate_euroc.sh  evo_euroc.py
orb_dbow2/: CMakeLists.txt  package.xml
orb_dbow2/include/orb_dbow2/dbow2/: BowVector.h  FClass.h  FORB.h  FeatureVector.h  ScoringObject.h  TemplatedVocabulary.h
orb_dbow2/src/dbow2/: BowVector.cpp  FORB.cpp  FeatureVector.cpp  ScoringObject.cpp
orb_dbow2/src/dutils/: Random.cpp  Timestamp.cpp
