<?xml version="1.0"?>
<package format="2">
  <name>orb_dbow2</name>
  <version>1.0.0</version>
  <description>catkinized dbow2 for orb_slam2</description>

  <maintainer email="hhuangat@connect.ust.hk">hyhuang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
